# omniverse-dhruv

./: README.md
omniverse_vrx/: CMakeLists.txt  README.md  package.xml  setup.py
omniverse_vrx/bags/: README.md
omniverse_vrx/cfg/: gymkhana_challenge_config.cfg  inverse_kinematics_config.cfg  mission_manager_config.cfg  scan_dock_deliver_config.cfg  scene_perception_config.cfg  semantic_navigation_config.cfg  station_keeping_config.cfg  task_manager_config.cfg  teleoperation_config.cfg  wayfinding_config.cfg
omniverse_vrx/launch/playback/: playback_gymkhana_challenge.launch  playback_scan_dock_deliver.launch  playback_scene_perception.launch  playback_semantic_navigation.launch  playback_station_keeping.launch  playback_wayfinding.launch
omniverse_vrx/launch/record/: record_gymkhana_challenge.launch  record_scan_dock_deliver.launch  record_scene_perception.launch  record_semantic_navigation.launch  record_wayfinding.launch  (+1 more)
omniverse_vrx/scripts/: entrypoint.sh  omniverse_gymkhana_challenge.sh  omniverse_scan_dock_deliver.sh  omniverse_scene_perception.sh  omniverse_semantic_navigation.sh  omniverse_station_keeping.sh  omniverse_vrx.sh  omniverse_wayfinding.sh
omniverse_vrx/src/: omniverse_gymkhana_challenge.py  omniverse_inverse_kinematics.py  omniverse_mission_manager.py  omniverse_scan_dock_deliver.py  omniverse_scene_perception.py  omniverse_semantic_navigation.py  omniverse_station_keeping.py  omniverse_task_manager.py  omniverse_teleoperation.py  omniverse_wayfinding.py
omniverse_vrx/urdf/: README.md  omniverse.urdf
omniverse_vrx/worlds/: README.md
(+20 files in other folders)
