<?xml version="1.0"?>
<package format="2">

  <name>omniverse_vrx</name>

  <url type="repository">https://github.com/dhruvilk/Omniverse-VRX</url>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geographic_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>vrx_gazebo</build_depend>
  <build_depend>xacro</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geographic_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>vrx_gazebo</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>

</package>
